[package]
name = "foundry"
version = "0.1.0"
authors = ["Eisha Chen-yen-su <chenyensu0@gmail.com>"]
description = "A life library written in Rust."
license = "LGPL-3.0-or-later"
repository = "https://github.com/Kagamihime/foundry.git"

[dependencies]
rand = "0.5"
vulkano = "0.10"
vulkano-shader-derive = "0.10"
